2011-07-17    <Jim@X64PC>

	* CPU/spim.h, PCSpim/ConsoleWnd.cpp, PCSpim/SpimSupport.cpp,
	QtSpim/console.cpp, QtSpim/console.h, QtSpim/spim_support.c,
	Tests/read.s, spim/spim.c, xspim/xspim.c,
	QtSpim/help/HP_AppA.html:
	Better document the behavior of the console window in both
	memory_mapped and regular mode. None of the simulators, beyond
	spim, yet allows editing in either mode. Eliminate inconsistently
	implemented control-c processing, except in spim simulator.

	* QtSpim/spimview.cpp (closeEvent) [Mario H. Voorsluys m.h.voorsluys@student.tudelft.nl]:
	Close console window when main QtSpim window closes.

2011-07-16    <Jim@X64PC>

	* QtSpim/state.cpp (readSettings):
	If the size of the restored window exceeds the current screen
	size, resize the window.

	* CPU/run.c (start_CP0_timer) [Ed Harcourt (edharcourt1)]:
	Clean up non-Windows timer code to not reset timer until it has
	expired. This behavior may have caused problems on Linux x64.

	* QtSpim/console.cpp, QtSpim/console.h, QtStpim/spim_support.c [Merlin Hansen (wasteofammo)]:
	Memory mapped IO was not fully implemented.

	* QtSpim/menu.cpp (sim_Run) [Merlin Hansen (wasteofammo)]:
	Reduced frequency of updating screen 100-fold to reduce the ~100
	slowdown relative to the console version.

2011-06-19    <Jim@X64PC>

	* QtSpim/Documentation/SourceForge [kevin.vermeer (kevin.vermeer)]:
	PDF files not uploaded to SourceForge.

	* QtSpim/datawin.cpp (formatMemoryContents) [Robert K. Moniot (moniot)]:
	Incorrect html dropped line break after run of zeros.

	* QtSpim/help/Fig7.1.jpg [William Barrett wbarrett1076@comcast.net]:
	Missing figure in help file: rename file from FIg7.1.jpg to
	Fig7.1.jpg since help tools are case sensitive.

	* QtSpim/regwin.cpp [William Barrett wbarrett1076@comcast.net]:
	Only printed out half of double precision FP registers.

	* QtSpim/spimview.ui [William Barrett wbarrett1076@comcast.net]
	Corrected misspelling in File menu item.

2011-06-19    <Jim@LS-RED>
